tests/ui/parser/issues/issue-101477-let.stderr
error: unexpected `==`
  --> $DIR/issue-101477-let.rs:4:11
   |
LL |     let x == 2;
   |           ^^
   |
help: try using `=` instead
   |
LL -     let x == 2;
LL +     let x = 2;
   |

error: aborting due to 1 previous error

